# mynewproject

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  BACKUP_RESTORE_GUIDE.md  COMPLETE_CHECKLIST.md  DATABASE_MIGRATION_GUIDE.md  DEPLOYMENT.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  PROFIT_IMPLEMENTATION.md  QUICK_REFERENCE.md  README_PROFIT_SYSTEM.md  TESTING_GUIDE.md  nixpacks.toml  package-lock.json  render.yaml  restore-backup.ps1
backend/: .env.example  Dockerfile  README.md  check_users.py  pyproject.toml  requirements.txt  reset_password.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: user.py
backend/app/schemas/: auth.py  user.py
backend/app/utils/: time.py
backend/data/: app-RESET-20260120-203055.db  app-RESET-20260120-204646.db  app.db
backend/inventory_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/dist-v2/: index.html
client/src/: index.css  main.jsx
mobile/: .env  .env.example  app.js  app.json  package-lock.json  package.json  react-native.config.js
mobile/App/: index.js
mobile/android/: build.gradle  gradle.properties  settings.gradle
mobile/src/: config.js
server/: check_invoice_741.mjs  check_purchase_returns.mjs  check_return_amount.mjs  check_tables.js  package-lock.json  package.json
server/data/: inventory.db
server/scripts/: addPayloadHashColumn.js  (+20 more)
(+142 files in other folders)
